--- a/v3-child/package.json
+++ b/v3-child/package.json
@@ -13,6 +13,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
